@@ -475,3 +475,5 @@ filterit.1
 tests/spfquery.txt
 backup.conf
 rd-remote
+printass
+printass.1
