@@ -71,6 +71,7 @@ f:::0644:/man1/:new-inject.1:new-inject.1
 f:::0644:/man1/:plugtest.1:plugtest.1
 f:::0644:/man1/:predate.1:predate.1
 f:::0644:/man1/:preline.1:preline.1
+f:::0644:/man1/:printass.1:printass.1
 f:::0644:/man1/:printforward.1:printforward.1
 f:::0644:/man1/:printmaillist.1:printmaillist.1
 f:::0644:/man1/:qaes.1:qaes.1
